--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Drink Name</h1>
-    <h3><input type="text" id="drink-name-input" placeholder="Enter Drink Name"></h3>
-    <button id="submit-button">Submit</button>
-    <h2 id="drink-name"></h2>
-    <p id="instructions"></p>
-    <span>
-        <ul id="ingredients-list"></ul>
-    </span>
-    <img src="" alt="" height="300px" width="300px" id="drink-image">
+    <section id="home">
+        <h1>Drink Name</h1>
+        <h3><input type="text" id="drink-name-input" placeholder="Enter Drink Name"></h3>
+        <button id="submit-button">Submit</button>
+        <h2 id="drink-name"></h2>
+        <p id="instructions"></p>
+        <span>
+            <ul id="ingredients-list"></ul>
+        </span>
+        <img src="" alt="" height="300px" width="300px" id="drink-image">
+    </section>
 
     <script>
         const submitButton = document.getElementById('submit-button')
